# velocity

./: .gitignore  ALGORITHMIC_CORE.md  ARCHITECTURE.md  COMPARISON.md  DOCUMENTATION.md  GET_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_PLAN.md  LICENSE  NATURAL_ANSWERS_SUMMARY.md  PARADIGM.md  PHILOSOPHY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_ALGORITHMIC.md  REAL_WEB_SEARCH.md  SMART_SYSTEM_UPGRADE.md  START_HERE.md  env.example  interactive_velocity.py  pyproject.toml  requirements.txt  test_improved_answers.py  test_natural_answers.py  test_smart_system.py
examples/: algorithmic_core_demo.py  basic_usage.py  interactive_demo.py  simple_test.py
tests/: test_algorithmic_core.py  test_state.py
velocity/: __init__.py
velocity/core/: __init__.py  engine.py  epistemic_router.py  hypothesis_eliminator.py  hypothesis_generator.py  intent_parser.py  interrogation_loop.py  network_gate.py  state.py  state_synthesizer.py  velocity_core.py
velocity/evaluation/: __init__.py  hypothesis.py
velocity/network/: __init__.py  interrogator.py  web_search.py
