[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velocity-paradigm"
version = "0.1.0"
description = "Network-Native, Dataset-Free General Intelligence"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Velocity Team"}
]
keywords = [
    "artificial-intelligence",
    "machine-learning",
    "network-native",
    "dataset-free",
    "general-intelligence"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
gpu = [
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/velocity-paradigm/velocity"
Documentation = "https://velocity-paradigm.readthedocs.io"
Repository = "https://github.com/velocity-paradigm/velocity"
Issues = "https://github.com/velocity-paradigm/velocity/issues"

[tool.setuptools]
packages = ["velocity"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
